<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyLight"
        android:fitsSystemWindows="true">

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="vertical"/>

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_mid"
            app:layout_constraintGuide_begin="200dp"
            android:orientation="vertical"/>

    <View
            android:id="@+id/time_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_date"/>

    <TextView
            android:id="@+id/select_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/select_time_title"
            android:textColor="@color/greyDark"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/time_background"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/greyLight"
            app:layout_constraintTop_toBottomOf="@id/select_time_title"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingBottom="15dp"
            android:text="@string/data"
            android:textColor="@color/greyDark"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/select_time_title"/>

    <TextView
            android:id="@+id/tv_select_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_mid"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:hint="@string/select_data"/>

    <View
            android:id="@+id/foreign_capital_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/time_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_total"/>

    <TextView
            android:id="@+id/foreign_capital_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/foreign_capital_condition"
            android:textColor="@color/greyDark"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/foreign_capital_background"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/greyLight"
            app:layout_constraintTop_toBottomOf="@id/foreign_capital_title"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_hu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/hu"
            android:textColor="@color/greyDark"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/foreign_capital_title"/>

    <EditText
            android:id="@+id/tv_hu_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_hu"
            app:layout_constraintStart_toStartOf="@id/guideline_mid"
            android:background="@color/white"
            android:gravity="right"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp"
            android:hint="@string/hu_hint"
            android:inputType="numberSigned|numberDecimal"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/greyLight"
            app:layout_constraintTop_toBottomOf="@id/tv_hu"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_shen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/shen"
            android:textColor="@color/greyDark"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_hu"/>

    <EditText
            android:id="@+id/tv_shen_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="13sp"
            app:layout_constraintTop_toTopOf="@id/tv_shen"
            app:layout_constraintStart_toStartOf="@id/guideline_mid"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:hint="@string/shen_hint"
            android:inputType="numberSigned|numberDecimal"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/greyLight"
            app:layout_constraintTop_toBottomOf="@id/tv_shen"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingBottom="15dp"
            android:text="@string/total"
            android:textColor="@color/greyDark"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_shen"/>

    <TextView
            android:id="@+id/tv_total_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            app:layout_constraintStart_toStartOf="@id/guideline_mid"
            app:layout_constraintTop_toTopOf="@id/tv_total"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp"
            android:hint="@string/total_hint"/>

    <View
            android:id="@+id/fund_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/foreign_capital_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_deal"/>

    <TextView
            android:id="@+id/fund_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fund_deal"
            android:textColor="@color/greyDark"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/fund_background"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/greyLight"
            app:layout_constraintTop_toBottomOf="@id/fund_status_title"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingBottom="15dp"
            android:text="@string/deal"
            android:textColor="@color/greyDark"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/fund_status_title"/>

    <EditText
            android:id="@+id/tv_deal_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_deal"
            android:background="@color/white"
            android:gravity="right"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_mid"
            android:layout_marginRight="20dp"
            android:hint="@string/deal_hint"
            android:inputType="numberSigned|numberDecimal"/>

    <TextView
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/save"/>

</android.support.constraint.ConstraintLayout>