<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
            android:id="@+id/fund_info_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_date"/>

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="vertical"/>

    <TextView
            android:id="@+id/foreign_capital_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/foreign_capital"/>

    <TextView
            android:id="@+id/foreign_capital_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/foreign_capital_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"/>

    <TextView
            android:id="@+id/fund_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/foreign_capital_title"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="@string/fund"/>

    <TextView
            android:id="@+id/fund_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/fund_title"
            app:layout_constraintTop_toTopOf="@+id/fund_title"
            android:textColor="@color/white"/>

    <TextView
            android:id="@+id/difference_value_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/fund_title"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="@string/difference_value"/>

    <TextView
            android:id="@+id/difference_value_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/difference_value_title"
            app:layout_constraintTop_toTopOf="@+id/difference_value_title"
            android:textColor="@color/white"/>

    <View
            android:id="@+id/head_line"
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/difference_value_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/data"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintTop_toBottomOf="@id/head_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_hu"/>

    <TextView
            android:id="@+id/tv_hu"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/hu"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/tv_date"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/tv_date"
            app:layout_constraintRight_toLeftOf="@id/tv_shen"/>

    <TextView
            android:id="@+id/tv_shen"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/shen"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/tv_date"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/tv_hu"
            app:layout_constraintRight_toLeftOf="@id/tv_total"/>

    <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@id/tv_date"
            app:layout_constraintLeft_toRightOf="@id/tv_shen"
            app:layout_constraintRight_toLeftOf="@id/tv_deal"/>

    <TextView
            android:id="@+id/tv_deal"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/deal"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@id/tv_date"
            app:layout_constraintLeft_toRightOf="@id/tv_total"
            app:layout_constraintRight_toRightOf="parent"/>

    <ListView
            android:id="@+id/fund_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/fund_info_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>